--- a/api/categories/models/categories.settings.json
+++ b/api/categories/models/categories.settings.json
@@ -11,23 +11,24 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "Title": {
+    "title": {
       "type": "string"
     },
-    "Cover": {
+    "cover": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "files",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
       "required": false
     },
-    "Slug": {
-      "type": "uid",
-      "targetField": "Title"
+    "slug": {
+      "type": "uid"
+    },
+    "actions": {
+      "via": "categories",
+      "collection": "action"
     }
   }
 }
