add geojson field and geocoding logic to strapi

--- a/api/action/models/action.settings.json
+++ b/api/action/models/action.settings.json
@@ -35,7 +35,8 @@
       "required": false
     },
     "slug": {
-      "type": "uid"
+      "type": "uid",
+      "targetField": "title"
     },
     "categories": {
       "collection": "categories",
@@ -47,8 +48,11 @@
       "default": false
     },
     "neighborhood": {
-      "via": "actions",
-      "model": "neighborhoods"
+      "model": "neighborhoods",
+      "via": "actions"
+    },
+    "geojson": {
+      "type": "json"
     }
   }
 }
