--- a/api/categories/models/categories.settings.json
+++ b/api/categories/models/categories.settings.json
@@ -24,7 +24,8 @@
       "required": false
     },
     "slug": {
-      "type": "uid"
+      "type": "uid",
+      "targetField": "title"
     },
     "actions": {
       "via": "categories",
