--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "<0.20.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.3.3",
     "pg-connection-string": "^2.4.0",
     "sqlite3": "latest",
