--- a/api/homepage/models/homepage.settings.json
+++ b/api/homepage/models/homepage.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "homepages",
   "info": {
-    "name": "Homepage"
+    "name": "Homepage",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,7 +16,6 @@
       "via": "related",
       "allowedTypes": [
         "images",
-        "files",
         "videos"
       ],
       "plugin": "upload",
@@ -37,7 +37,16 @@
       "via": "related",
       "allowedTypes": [
         "images",
-        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "vacations": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
         "videos"
       ],
       "plugin": "upload",
